--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,8 @@ Date now = new Date()
 
 /*
  * General Details on config setup:
- * https://www.nextflow.io/docs/latest/config.html
+ * https://www.nextflow.io/docs/latest/google.html
+ * https://docs.seqera.io/platform/23.3.0/compute-envs/google-cloud-batch
  */
 
 manifest {
@@ -67,7 +68,13 @@ profiles {
     }
 }
 
-
+google {
+    batch.spot = true
+}
+process {
+    errorStrategy = { task.exitStatus==14 ? 'retry' : 'terminate' }
+    maxRetries = 5
+}
 
 
 
